# my-poetry

./: .gitignore  README.md  README.rst  pyproject.toml
poet/: blog.py  user.py
tests/: test_blog.py  test_mock.py  test_user.py
